# howto-semantic-caching

./: makefile  pyproject.toml
.devcontainer/: devcontainer.json  howto-gptcache-weaviate.code-workspace
notebooks/: 01-howto.ipynb
